--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,12 @@
     		<artifactId>commons-lang3</artifactId>
     		<version>3.0</version>
 		</dependency>
+		<!-- Jackson JSON Mapper -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
