--- a/pom.xml
+++ b/pom.xml
@@ -164,11 +164,32 @@
     		<version>3.0</version>
 		</dependency>
 		<!-- Jackson JSON Mapper -->
+<!-- 		<dependency> -->
+<!--         	<groupId>org.codehaus.jackson</groupId> -->
+<!--         	<artifactId>jackson-core-asl</artifactId> -->
+<!--         	<version>1.9.13</version> -->
+<!--     	</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.codehaus.jackson</groupId> -->
+<!-- 			<artifactId>jackson-mapper-asl</artifactId> -->
+<!-- 			<version>1.9.13</version> -->
+<!-- 		</dependency> -->
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.13</version>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.5.3</version>
+		    <scope>compile</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.5.3</version>
+		</dependency>
+		<dependency>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-annotations</artifactId>
+        	<version>2.4.1</version>
+    	</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
